Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/Asignacion_Web_to_Lead__c.object-meta.xml
<CustomObject>
    <label>Asignación Web to Lead</label>
    <nameField>
        <label>Nombre de Asignaciones Web to Lead</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignaciones Web to Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>