Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Cantidad_LA__c.field-meta.xml
<CustomField>
    <fullName>CI_Cantidad_LA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad de Leads Asignados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>