Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Fecha_Ultima_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Ultima_Asignacion__c</fullName>
    <label>Fecha de última asignación</label>
    <type>DateTime</type>
</CustomField>