Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyecto__c</fullName>
    <formula>CI_Usuario__r.CI_Nombre_Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto</label>
    <type>Text</type>
</CustomField>