Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Usuario__c.field-meta.xml
<CustomField>
    <fullName>CI_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asignaciones_Web_to_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>