Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Usuario_Activo__c.field-meta.xml
<CustomField>
    <fullName>CI_Usuario_Activo__c</fullName>
    <formula>IF(CI_Usuario__r.IsActive,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario Activo</label>
    <type>Checkbox</type>
</CustomField>