Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/CI_Usuario_Activo_Web__c.field-meta.xml
<CustomField>
    <fullName>CI_Usuario_Activo_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo Web</label>
    <type>Checkbox</type>
</CustomField>