Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/fields/Proyecto_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto Vendedor</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Asignaciones Web to Lead</relationshipLabel>
    <relationshipName>Asignaciones_Web_to_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>