Inmob-Salesforce/force-app/main/default/objects/Asignacion_Web_to_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CI_Usuario_Activo_Web__c</columns>
    <columns>CI_Usuario__c</columns>
    <columns>Proyecto_vendedor__c</columns>
    <columns>CI_Fecha_Ultima_Asignacion__c</columns>
    <columns>CI_Proyecto__c</columns>
    <columns>CI_Usuario_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>